--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
    <link rel="stylesheet" href="style2.css">
 </head>
 
-<body style="background-color: rgb(247, 250, 250);">
+<body style="background-color: rgb(255, 255, 255);">
 <header>
    
    <id id="navbar">   
-     <a id="logo" href="./index.html">Portfolio</a>
+     <H3>Portfolio</H3>
    </id>
    <button><a href="./public/about.html">abount me</a></button>
    <button><a href="./public/contact.html">contact me</a></button>
@@ -21,28 +21,33 @@
 
 <div about="me">
    <img src="C:\Users\HP\Desktop\portfolio\4.3 HTML Porfolio Project\public\Screenshot_24-7-2024_195758_.jpeg" height="100px" width="100px">
-<h4>I'm Sarthak Santosh Padale.</h4>
+<p>
+   <h4>I'm Sarthak Santosh Padale.</h4>
+   <h4>A Web developer</h4>
+</p>
 </div>
 <div id="container">
-   <div class="box"> <a href="./public/project.html" target="_blank"><img src="./public/download.png" alt="box1"></div></a>
-   <div class="box"> <a href="./Myeducation.html" target="_blank"><img src="./public/education.png" alt="box2"></div></a>
-  
+   <div class="box"> <a href="./public/project.html" target="_blank"><img src="./public/download.png" alt="box1"> <h4>Project</h4></div></a>
+   <div class="box"> <a href="./Myeducation.html" target="_blank"><img src="./public/education.png" alt="box2"> <h4>Education</h4></div></a>
+   
   
 </div>
+<h1>Skills</h1>
+<h4>FRONT END</h4>
+<div id="container2">
+        <div class="box1"><img src="./public/html.png" alt="box1"></div>
+        <div class="box1"><img src="./public/css.png" alt="box2"></div>
+        <div class="box1"><img src="./public/js.png"  alt="box3"></div>
+        
+   </div> 
+   <H4>BACK END</H4>
+ <div id="container3">
+       <div class="box2"><img src="./public/c.png" alt="box2"></div>
+       <div class="box2"><img src="./public/java.png" alt="box3"></div>
+      
+ </div>      
+
 </body>
 
 </html>
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
